# BazierCurve

./: .gitignore  CMakeLists.txt  baziercurve.cpp  baziercurve.h  main.cpp
